third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/diagnostic-not-implemented-into-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-into-bytes.rs:18:24
   |
18 |     takes_into_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy`
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `takes_into_bytes`
  --> tests/ui-nightly/diagnostic-not-implemented-into-bytes.rs:21:24
   |
21 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_into_bytes`
